Update and rename home2.html to index2.html

--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 		<meta property="og:title" content="Theblockbuster1 - Home" />
 		<meta name="description" content="Welcome to my Website! I hope you have a nice stay! :D">
 		<meta property="og:description" content="Welcome to my Website! I hope you have a nice stay! :D" />
-		<meta property="og:url" content="http://blockone.cf/" />
+		<meta property="og:url" content="http://bblok.tech/" />
 		<meta property="og:image" content="/assets/images/annoying dog epic 1 1.png" />
 		<meta name="google-site-verification" content="PTjYERzWEbyNpY3eXrjpO1Rn7Rc1OXa68OLz6dlcdRE" />
 		<!--Import Google Icon Font-->
