--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
 		$(document).ready(function(){
 		$.ajax({
 			type: "GET",
-			url: "https://official-joke-api.appspot.com/random_joke",
+			url: "https://official-joke-api.appspot.com/jokes/programming/random",
 			data: {
 			},
 			dataType: "json"
@@ -50,6 +50,7 @@
 			} else {
 				msg_err = "Uncaught Error. "+ jqXHR.responseText;
 			}
+            console.log("Error: " + msg_err);
 		})
 		.always(function() {
 		});
@@ -59,7 +60,7 @@
 		function newjoke(){
 		$.ajax({
 			type: "GET",
-			url: "https://official-joke-api.appspot.com/random_joke",
+			url: "https://official-joke-api.appspot.com/jokes/programming/random",
 			data: {
 			},
 			dataType: "json"
@@ -84,6 +85,7 @@
 			} else {
 				msg_err = "Uncaught Error. "+ jqXHR.responseText;
 			}
+            console.log("Error: " + msg_err);
 		})
 		.always(function() {
 		});
