--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
 		$(document).ready(function(){
 		$.ajax({
 			type: "GET",
-			url: "https://official-joke-api.appspot.com/jokes/programming/random",
+			url: "https://official-joke-api.appspot.com/random_joke",
 			data: {
 			},
 			dataType: "json"
@@ -60,7 +60,7 @@
 		function newjoke(){
 		$.ajax({
 			type: "GET",
-			url: "https://official-joke-api.appspot.com/jokes/programming/random",
+			url: "https://official-joke-api.appspot.com/random_joke",
 			data: {
 			},
 			dataType: "json"
@@ -425,9 +425,7 @@ https://templatemo.com/tm-526-vanilla
                         <li><a href="/youtube"><i class="fab fa-youtube"></i></a></li>
 						<li><a href="/discord"><i class="fab fa-discord"></i></a></li>
                     </ul>
-                    <p>Copyright &copy; 2019 Company Name 
-            
-            		- Design: <a rel="nofollow noopener" href="https://templatemo.com"><em>TemplateMo</em></a></p>
+                    <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Theblockbuster1</p>
                 </div>
             </div>
         </div>
