Discord's new domain

--- a/redirects/discord.html
+++ b/redirects/discord.html
@@ -2,5 +2,5 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="theme-color" content="#2f3136">
 <script>
-window.location = "https://discordapp.com/invite/jqsZKxU"
+window.location = "https://discord.com/invite/jqsZKxU"
 </script>
