Discord's new domain

--- a/discord/index.html
+++ b/discord/index.html
@@ -1,4 +1,4 @@
-<a id="url" href="https://discordapp.com/invite/jqsZKxU">CLICK HERE</a> to get redirected if nothing happens in 5 seconds.
+<a id="url" href="https://discord.com/invite/jqsZKxU">CLICK HERE</a> to get redirected if nothing happens in 5 seconds.
 <script>
 window.location.href = document.getElementById("url").getAttribute("href");
 </script>
