--- a/about/index.html
+++ b/about/index.html
@@ -2,21 +2,7 @@
 <html>
 <title>Theblockbuster1 - About</title>
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138741894-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-138741894-1');
-</script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-	$("div a:last").remove();
-});
-</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=VT323' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Rubik' rel='stylesheet'>
