--- a/index.html
+++ b/index.html
@@ -2,21 +2,7 @@
 <html>
 <title>Theblockbuster1 - Home</title>
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138741894-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-138741894-1');
-</script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-	$("div a:last").remove();
-});
-</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <meta name="description" content="Welcome to my Website! I hope you have a nice stay! :D">
 <meta name="google-site-verification" content="PTjYERzWEbyNpY3eXrjpO1Rn7Rc1OXa68OLz6dlcdRE" />
 <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
