--- a/terminal/index.html
+++ b/terminal/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script>
-	$(document).ready(function(){
-		$("div a:last").remove();
-	});
-	</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <title>Block Terminal</title>
     <link rel="stylesheet" href="terminal.css">
     <style>
