--- a/terminal/uhhhhmeow/index.html
+++ b/terminal/uhhhhmeow/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	  <script>
-	  $(document).ready(function(){
-	  	$("div a:last").remove();
-	  });
 	  $(document).keyup(function(e) {
 	  	 if (e.key === "Escape") {
 	  		window.history.back();
