--- a/redirects/discord.html
+++ b/redirects/discord.html
@@ -1,4 +1,4 @@
-<meta property="og:image" content="http://blockbot.glitch.me/inviteembed.png">
+<meta property="og:image" content="http://blockbot.bblok.tech/inviteembed.png">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="theme-color" content="#2f3136">
 <script>
