--- a/twitter/index.html
+++ b/twitter/index.html
@@ -1,4 +1,5 @@
-<a id="url" href="https://twitter.com/The1block">CLICK HERE</a> to get redirected if nothing happens in 5 seconds.
+<h1>You are being redirected!</h1>
+<a id="url" href="https://twitter.com/The1block">CLICK HERE</a> if nothing happens.
 <script>
 window.location.href = document.getElementById("url").getAttribute("href");
 </script>
