Firefox page 1 height fix

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div id="pagepiling">
-        <div class="section" id="page1">
+        <div class="section" id="page1" style="display: inline-block;">
             <ul class="tree-view blink" style="height: 12px;">
                 <div class="title-bar inactive" style="margin: -4px -4px 2px -4px;">
                     <div class="title-bar-text"></div>
