--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                                     <summary>Other Profiles</summary>
                                     <ul>
                                         <li><a href="https://steamcommunity.com/id/Theblockbuster1/"><img src="assets/images/icons/steam.png" class="tree-icon">Steam</a></li>
+                                        <li><a rel="me" href="https://mastodon.social/@blok"><img src="assets/images/icons/mastodon.png" class="tree-icon">Mastodon</a></li>
                                     </ul>
                                 </details>
                             </li>
