--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Theblockbuster1 - Home</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="wot-verification" content="16f2da0f1738a65fe716"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pagePiling.js/1.5.6/jquery.pagepiling.min.css" integrity="sha512-W9OWS8dgpQBw5Hb+tbMto1BMsHvYOXT/AFBGvASCPUJleaEdpOAN5lzgj9RrTbo3YrlR+m9xdOBccp8F+SFyQg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel='stylesheet' type='text/css' media='screen' href='block-reveal.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
