--- a/index.html
+++ b/index.html
@@ -124,5 +124,7 @@
         </ul>
         <div id="dog-spin" class="shake-constant shake-0"></div>
     </div>
+    <link href="https://melonking.net/styles/flood.css" rel="stylesheet" type="text/css" media="all" />
+    <script src="https://melonking.net/scripts/flood.js"></script>
 </body>
 </html>
