--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <li style="visibility: hidden;">Welcome to bblok.dev</li>
             <li style="display: none;">
-                <a href="https://blog.bblok.dev"><img src="assets/images/icons/smiley.png" class="tree-icon-big">Blog</a>
+                <a href="/blog"><img src="assets/images/icons/smiley.png" class="tree-icon-big">Blog</a>
             </li>
             <li style="display: none;">
                 <details>
